[package]
name = "ptouch"
repository = "https://github.com/ryankurte/rust-ptouch"
description = "Brother PTouch label maker driver and utility"
keywords = [ "ptouch", "label", "print", "driver" ]
readme = "README.md"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "MPL-2.0"

[features]
util = [ "toml", "structopt", "strum", "serde" ]
preview = [ "embedded-graphics-simulator" ]
default = [ "util", "preview" ]

[dependencies]
structopt = { version = "0.3.21", optional = true }
rusb = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.13"
bitfield = "0.13.2"
bitflags = "1.2.1"
strum = { version = "0.20.0", optional = true }
strum_macros = "0.20.1"
anyhow = "1.0.38"

simplelog = "0.9.0"
qrcode = "0.12.0"
image = "0.23.13"
barcoders = "1.0.2"

thiserror = "1.0.23"
tempdir = "0.3.7"

embedded-graphics = "0.7.1"
embedded-text = "0.4.0"
# TODO: make preview optional
embedded-graphics-simulator = { version = "0.2.0", optional = true }

serde = { version = "1.0.123", features = [ "derive" ], optional = true }
bitvec = "0.22.0"
toml = { version = "0.5.8", optional = true }

[[bin]]
name = "ptouch-util"
path = "src/util.rs"
required-features = [ "util" ]
