[package]
name = "ptouch"
repository = "https://github.com/ryankurte/rust-ptouch"
description = "Brother PTouch label maker driver and utility"
keywords = [ "ptouch", "label", "print", "driver" ]
readme = "README.md"
version = "0.2.3"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "MPL-2.0"

[features]
util = [ "toml", "clap", "strum", "serde" ]
preview = [ "embedded-graphics-simulator" ]
default = [ "util", "preview" ]
clap = ["dep:clap"]

[dependencies]
clap = { version = "4.5.26", optional = true, features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
rusb = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.13"
bitfield = "0.19.0"
bitflags = "2.11.0"
strum = { version = "0.28.0", optional = true }
strum_macros = "0.28.0"
anyhow = "1.0.38"

simplelog = "0.12.0"
qrcode = "0.14.0"
datamatrix = "0.3.1"
image = "0.25.0"
barcoders = "2.0.0"

thiserror = "2.0.18"
tempdir = "0.3.7"

embedded-graphics = "0.8.2"
embedded-text = "0.7.3"
# TODO: make preview optional
embedded-graphics-simulator = { version = "0.8.0", optional = true }

serde = { version = "1.0.123", features = [ "derive" ], optional = true }
bitvec = "1.0.1"
toml = { version = "1.0.3", optional = true }

[[bin]]
name = "ptouch-util"
path = "src/util.rs"
required-features = [ "util" ]
